--- a/snapshot/main.html
+++ b/snapshot/main.html
@@ -15,7 +15,6 @@
     </header>
     <div id="lgb">
     <div id="login-box">
-        <h2>Вход в аккаунт:</h2>
         <form action="" method="get">
                 <label for="lb-username"> Логин: </label>
             <input id="lb-username" type="text">
@@ -25,13 +24,13 @@
             <br>
             <button id="lb-submit-btn" type="submit">    OK</button>
         </form>
-        <div class="links">
-        <a href="register.html">Нет аккаунта? Регистрация</a>
-        <br><br>
-        <a href="https://www.kok.team/ru/2018-06-26/mogu-li-ya-perestat-byt-geem">Вы АиУ или МКМ?</a>
-        </div>
     </div>
     </div>
+    <div class="links">
+            <a href="register.html">Нет аккаунта? Вы можете зареегистрироваться</a>
+            <br><br>
+            <a id="mem" href="https://www.kok.team/ru/2018-06-26/mogu-li-ya-perestat-byt-geem">Вы АиУ или МКМ?</a>
+            </div>
     <footer>
 
     </footer>
