--- a/snapshot/class.html
+++ b/snapshot/class.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="C:\Users\Админ\Desktop\WEBDEV\WEEK4\class.css">
     <link rel="stylesheet" type="text/css" media="screen" href="C:\Users\Админ\Desktop\WEBDEV\WEEK4\header-style.css">
-
-    <script src="main.js"></script>
+    <script src="main.js"></script> 
 </head>
 <body>
     <header>
@@ -20,7 +19,24 @@
             Calculus II
         </h1>
         <div class="rootpage">
-
+            <div class="links">
+                <h2>Teacher's links:</h2>
+                <div class="piazza">
+                <p><a href="">Class in Piazza.</a> Access code:</p>
+                </div>
+                <a href="">GoogleDocs for marks.</a><br>
+                <p>Email: <a href="">Email example.</a></p>
+            </div>
+            <div class="files">
+                    <h2>Teacher's files:</h2>
+                    <div class="filename">
+                        <p>file1</p><br>
+                        <p>file2</p><br>
+                        <p>file3</p><br>
+                        <p>file4</p><br>
+                        <p>file4</p>
+                    </div>
+            </div>
         </div>
     </div>
     </body>
