--- a/register.html
+++ b/register.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Регистрация</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="register.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="header-style.css">
+    <link rel="stylesheet" href="css\body.css">
+    <link rel="stylesheet" href="css\register.css">
+    <link rel="stylesheet" href="css\header-style.css">
+    <link rel="stylesheet" href="css\footer.css">
+    <link rel="stylesheet" href="font.css">
+    <link rel="icon" href="../img/106794-200.png">
     <script src="main.js"></script>
 </head>
-<body background="kbtu.jpg">
-    <header>
-        <a href="main.html"> <h1>FIThub.com</h1> </a>
+<header>
+        <a href="main.html"> <h1>FIThub.com</h2> </a>
+            <div class="doptext">
+                    <a href="class.html"> Subjects </a> |
+                    <a href="project info.html"> Info </a> |
+                    <a href="news.html"> News </a>
+              </div>
     </header>
-
-    <div class="main">
+    <main>
+        <div class="mainp">
+        <div class="forma">
         <h1>Регистрация</h1>
         <form action="">
             Имя: <br>
@@ -44,9 +53,12 @@
             <br>
             <button type="submit"> Зарегистрироваться </button>
         </form>
+        </div>
     </div>
+        </main>
 
     <footer>
+            <p>Almaty 2019</p> 
 
     </footer>
 </body>
