--- a/main.html
+++ b/main.html
@@ -3,20 +3,27 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>FIThub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="header-style.css">
+    <link rel="stylesheet" href="css\body.css">
+    <link rel="stylesheet" href="css\main.css">
+    <link rel="stylesheet" href="css\header-style.css">
+    <link rel="stylesheet" href="css\footer.css">
+    <link rel="icon" href="../img/106794-200.png">
+
     <script src="main.js"></script>
 </head>
-<body background="kbtu.jpg">
-    <header>
+<header>
         <a href="main.html"> <h1>FIThub.com</h1> </a>
+            <div class="doptext">
+        <a href="class.html"> Subjects </a> |
+        <a href="project info.html"> Info </a> |
+        <a href="news.html"> News </a>
+        </div>
     </header>
-    <!-- <img src="kbtu.jpg" alt=""> -->
+    <main>
     <div id="lgb">
     <div id="login-box">
-        <h2>Вход в аккаунт:</h2>
         <form action="" method="get">
                 <label for="lb-username"> Логин: </label>
             <input id="lb-username" type="text">
@@ -24,13 +31,16 @@
             <label for="lb-password"> Пароль: </label>
             <input id="lb-password" type="password">
             <br>
-            <button id="lb-submit-btn" type="submit"> OK </button>
+            <button id="lb-submit-btn" type="submit"> Войти</button>
         </form>
-        <a href="register.html">Зарегистрироваться </a>
-    </div>
-    </div>
-    <footer>
 
+        <a href="register.html">Зарегистрироваться </a>
+
+    </div>
+    </div>
+    </main>
+    <footer>
+        <p>Almaty 2019</p> 
     </footer>
 </body>
 </html>
