minor design changes

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css\footer.css">
     <link rel="icon" href="../img/106794-200.png">
 
-    <script src="main.js"></script>
+    <script src="../FIThub/js/main.js"></script>
 </head>
 <header>
         <a href="main.html"> <h1>FIThub.com</h1> </a>
@@ -31,7 +31,7 @@
             <label for="lb-password"> Пароль: </label>
             <input id="lb-password" type="password">
             <br>
-            <button id="lb-submit-btn" type="submit"> Войти</button>
+            <button id="lb-submit-btn" type="submit"> Вход</button>
         </form>
 
         <a href="register.html">Зарегистрироваться </a>
